<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:inputType="text"
        android:autofillHints="@string/name_hint" />

    <EditText
        android:id="@+id/content_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/content_hint"
        android:autofillHints="@string/content_hint" />

    <Button
        android:id="@+id/add_todo_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/large"
        android:text="@string/add_button" />

</LinearLayout>
