<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:autofillHints="@string/name_hint"
        android:hint="@string/name_hint"/>

    <EditText
        android:id="@+id/content_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:autofillHints="@string/content_hint"
        android:hint="@string/content_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/large">

        <Button
            android:id="@+id/update_todo_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/small"
            android:layout_marginRight="@dimen/small"
            android:text="@string/update_button" />

        <Button
            android:id="@+id/delete_todo_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/small"
            android:layout_marginRight="@dimen/small"
            android:text="@string/delete_button" />

    </LinearLayout>



</LinearLayout>
